# mp3sort

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
geno-whirl/mp3sort/: __init__.py  __main__.py
