[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geno-whirl.mp3sort"
authors = [
  { name="Tomás Lungenstrass", email="geno_whirl11@proton.me" },
]
description = "Mp3 Sort"
readme = "README.md"
requires-python = ">=3.10, <4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "music-tag",
  "tqdm",
]
dynamic = ["version"]

[project.scripts]

[project.urls]
"Homepage" = "https://github.com/geno-whirl/mp3sort"
"Bug Tracker" = "https://github.com/geno-whirl/mp3sort/-/issues"

[tool.hatch.build]
include = ["geno-whirl"]

[tool.hatch.version]
path = "geno-whirl/mp3sort/__init__.py"

[tool.hatch.envs.dev]
dependencies = [
]
[tool.hatch.envs.dev.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=sample_hatch_project --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = ["import-error"]